--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql5030.xserver.jp
 DB_PORT=3306
-DB_DATABASE=naruec
-DB_USERNAME=naru
+DB_DATABASE=marakaki_ally
+DB_USERNAME=marakaki_ally
 DB_PASSWORD=passpass
 
 BROADCAST_DRIVER=log
@@ -26,11 +26,12 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=clientkanri001@gmail.com
-MAIL_PASSWORD=jxmwgxiehrnknrol
+MAIL_USERNAME=arakakiconsul@gmail.com
+MAIL_PASSWORD=hhmzhjmedovwnhzo
+
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=clientkanri001@gmail.com
-MAIL_FROM_NAME="ally"
+MAIL_FROM_ADDRESS=arakakiconsul@gmail.com
+MAIL_FROM_NAME="新垣　誠"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
